<resources>
    <string name="app_name">eframework</string>
    <string name="facebook_app_id">1739764742919285</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventos">Eventos</string>
    <string name="my_events">Meus Eventos</string>
    <string name="home">Início</string>
    <string name="logout">Logout</string>
    <string name="continuar_sem_login">Continuar sem login</string>
    <string name="url_server">http://www.mocky.io/v2/57a3738e3b000053169034bc</string>
    <string name="cards">Lista de cards</string>
    <string name="install">Instalar</string>
    <string name="open">Abrir</string>
    <string name="cancel">Cancelar</string>
    <string name="installing">Instalando evento...</string>
    <string name="shout_route">Traçar Rota</string>
    <string name="aguarde">Aguarde</string>
    <string name="capturando_posicao">Estamos capturando sua posição</string>

    <string name="search">Search</string>
    <string name="about">Sobre</string>
    <string name="version">Versão 1.0</string>
    <string name="copyright">2016 Copyright©</string>
    <string name="about_embedded">Laboratório de Sistemas Embarcados \ne Computação Pervasiva - UFCG - Brasil</string>
    <string name="about_desenvolvido">Desenvolvido por:</string>
    <string name="create_event">Criar evento</string>
    <string name="text_create_event">Você desejar criar um app para o seu evento? \nAcesse <b>www.eventshere.com</b> e configure o seu aplicativo para seu evento.</string>
    <string name="eventshere">eventshere</string>
    <string name="lembrete_para">Você tem um lembrete para um evento</string>
</resources>
