<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/home" />

        <item
            android:id="@+id/my_events"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/my_events" />

        <item
            android:id="@+id/create_event"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/create_event"
            />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_black_48dp"/>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout" />

    </group>

</menu>
