<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.AboutFragment">

    <include layout="@layout/content_main" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/about_icon"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/about_title"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/about_icon"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version"
        android:id="@+id/about_version"
        android:layout_below="@+id/about_title"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/about_copyright"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_embedded"
        android:id="@+id/about_embedded"
        android:layout_below="@+id/about_copyright"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:phoneNumber="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_desenvolvido"
        android:id="@+id/about_desenvolvido"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo_desk"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/about_embedded"
        android:layout_alignStart="@+id/about_embedded" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo_embedded"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignRight="@+id/about_embedded"
        android:layout_alignEnd="@+id/about_embedded" />

</RelativeLayout>